# iafuture-builder

./: .gitignore  Dockerfile  README.md  entrypoint.sh
external-chat-installer/: README.md  chat-app.config.json  package.json  vite.config.mjs
external-chat-installer/scripts/: generate_branding_assets.py
external-chat-installer/src/: main.js  preload.js
external-chat-installer/src-tauri/: Cargo.toml  tauri.conf.json
external-chat-installer/src-tauri/capabilities/: default.json
external-chat-installer/src-tauri/src/: main.rs
external-chat-installer/src/renderer/: app.js  index.html  styles.css
external-chat-installer/src/renderer-react/: index.html
external-chat-installer/src/renderer-react/public/: bridge.js
external-chat-installer/src/renderer-react/src/: App.jsx  main.jsx
external-chat-installer/src/renderer-react/src/components/: ChatLayout.jsx  Composer.jsx  ConfirmDialog.jsx  ConversationItem.jsx  DiagnosticsModal.jsx  Header.jsx  MessageList.jsx  Sidebar.jsx  SplashScreen.jsx
external-chat-installer/src/renderer-react/src/context/: DesktopAppContext.jsx
external-chat-installer/src/renderer-react/src/hooks/: useDesktopChat.js
external-chat-installer/src/renderer-react/src/services/: messages.js  runtime.js  theme.js
external-chat-installer/src/renderer-react/src/styles/: app.css
