[package]
name = "chat_desktop_app"
version = "1.0.0"
description = "Chat desktop shell powered by Tauri"
authors = ["Kryon IA"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
